# py-see-claude

./: .gitignore  .gitlab-ci.yaml  CLAUDE.md  Dockerfile  GUIDE.md  README.md  pyproject.toml  tox.ini
src/py_see_claude/: __init__.py  __main__.py  process.py  server.py  sessions.py  terminal.py
src/py_see_claude/static/: app.js  index.html  style.css
tests/: conftest.py  test_process.py  test_server.py  test_sessions.py  test_terminal.py
