[project]
name = "py-see-claude"
version = "0.1.0"
description = "A lightweight web dashboard to monitor and manage Claude Code sessions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.scripts]
py-see-claude = "py_see_claude.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_see_claude"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pylint",
    "pytest",
    "tox>=4.50.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pylint.main]
source-roots = ["src"]

[tool.pylint."messages control"]
disable = [
    "C0103",   # invalid-name (do_GET/do_POST are required by BaseHTTPRequestHandler)
    "C0114",   # missing-module-docstring
    "C0115",   # missing-class-docstring
    "C0116",   # missing-function-docstring
    "R0801",   # duplicate-code (dataclass fields overlap by design)
    "R0902",   # too-many-instance-attributes (dataclasses)
    "R0903",   # too-few-public-methods
    "R0912",   # too-many-branches (JSONL parsing is inherently branchy)
    "R0914",   # too-many-locals
    "R1702",   # too-many-nested-blocks (JSONL parsing)
    "W0622",   # redefined-builtin (format param in log_message override)
    "W0718",   # broad-exception-caught (SSE needs to catch all)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
